Fixed scroll on small screen mq

--- a/react-vite/src/components/DailyChartDetail/daily-chart-detail.css
+++ b/react-vite/src/components/DailyChartDetail/daily-chart-detail.css
@@ -10,6 +10,25 @@
     align-items: center;
     justify-content: center;
   }
+  .chartDetailHeader {
+    background-color: rgb(0, 0, 0);
+    box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.4);
+    padding: 10px 20px;
+    box-sizing: border-box;
+    /* margin: 20px 0 0 0; */
+    border-radius: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-flow: column wrap;
+    gap: 5px;
+    color: white;
+  }
+  .chartDetailHeader h1{
+    font-size:20px;
+    margin:0px;
+    padding:0px;
+  }
 }
 
 /* Small devices (tablets) */
@@ -33,6 +52,20 @@
     display: flex;
     justify-content: space-between;
   }
+  .chartDetailHeader {
+    background-color: rgb(0, 0, 0);
+    box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.4);
+    padding: 10px 20px;
+    box-sizing: border-box;
+    margin: 20px 0 0 0;
+    border-radius: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    /* flex-flow: column wrap; */
+    gap: 20px;
+    color: white;
+  }
 }
 
 .intervalInfoContain label {
@@ -45,21 +78,6 @@
   border: 10px solid;
   border-radius: 15px;
   padding: 5px;
-}
-
-.chartDetailHeader {
-  background-color: rgb(0, 0, 0);
-  box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.4);
-  padding: 10px 20px;
-  box-sizing: border-box;
-  margin: 20px 0 0 0;
-  border-radius: 10px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  /* flex-flow: column wrap; */
-  gap: 20px;
-  color: white;
 }
 
 .intervalInfoContain {
